objects/Partenaire_financeur__c.object
<CustomObject>
    <fields>
        <fullName>Compte_financeur__c</fullName>
        <label>Compte financeur</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partenaires_financeurs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Montant_financement__c</fullName>
        <description>Permet au commercial de saisir le montant de financement</description>
        <label>Montant financement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nom_compte_financeur__c</fullName>
        <formula>Compte_financeur__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom compte financeur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunite_financee__c</fullName>
        <label>Opportunité financée</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Partenaires_financeurs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pourcentage_financement__c</fullName>
        <label>Pourcentage financement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_sur_l_opportunit__c</fullName>
        <label>Type de financeur</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPCA</fullName>
                </value>
                <value>
                    <fullName>BOURSE</fullName>
                </value>
                <value>
                    <fullName>Entreprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pourcentage_financement_formule__c</fullName>
        <formula>(Montant_financement__c /   Opportunite_financee__r.Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% financement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Partenaire financeur / collecteur OPCA</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partenaires financeurs/ collecteurs OPCA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>